--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<a href="#"><span></span>手机爱钱进</a>
 			</div>
 			<div class="header_right3 r">
-				<a href="#">注册</a>
+				<a href="reg.html">注册</a>
 				<span>|</span>
 				<a href="#">登录</a>
 			</div>
@@ -273,13 +273,13 @@
 					true,-1,1500);
 					
 //		/*
-//		$("#downBox").animate({
-//			top:30,
-//			opacity:1
-//		}, 800);
-//		$("#downBox").animate({
+//			$("#downBox").animate({
+//				top:30,
+//				opacity:1
+//			}, 800);
+//			$("#downBox").animate({
 //			top:20,
-//		}, 100);
+//			}, 100);
 //		*/
 //		
 		$(".firstbox").mouseenter(
