--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 				<div class="left l">
 					<a href=""><h1></h1></a>
 				</div>
+				<div id="" class="center l">
+					<a href="shopping.html">点击此处有更多精美小商品等你哦~ >></a>
+				</div>
 				<ul class="right r">
 					<li class="r"><a href="#">官方论坛</a></li>
 					<li class="r"><a href="#">借款项目</a></li>
@@ -272,7 +275,7 @@
 					12,"#ccc","red",
 					true,-1,1500);
 					
-//		/*
+//		
 //			$("#downBox").animate({
 //				top:30,
 //				opacity:1
@@ -280,8 +283,8 @@
 //			$("#downBox").animate({
 //			top:20,
 //			}, 100);
-//		*/
 //		
+		
 		$(".firstbox").mouseenter(
 			function(){
 				$(".showfirstbox").css("position","absolute").animate({
