--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<p>爱钱进预期年化结算利率</p>
 				<p>约<span>9.5%</span></p>
 				
-				<a href="#" class="jion"><p>立即投资</p></a>
+				<a href="#" class="jion">立即投资</a>
 				
 				<a href="#" class="phone"><p>安装手机爱钱进 随时随地看回报</p></a>
 			</div>
